--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2694,107 +2694,107 @@ stories:
   domain: http://www.observer.com/
   link: https://www.moultrieobserver.com/news/ga_fl_news/department-of-family-and-children-services-celebrates-family-reunification/article_f0197e3b-b590-51d5-b9e2-5d7c5ec5352c.html
 images:
-- name: white-house-whitehouse-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-clean-view.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-blue-electricity.jpg
-- name: blossombar-colorful-dream-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-50-62.jpg
-- name: art-museum-art-museum-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-marcel-duchamp.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-- name: razorwire-DSC-0080-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-yellow-collage.jpg
-- name: supreme-court-supremecourt-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-green-zuma.jpg
-- name: oldhotel-oldhotel-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crabapple.jpg
-- name: razorwire-DSC-0080-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colored-circuits.jpg
-- name: oldhouse-oldhouse-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kandinsky-bv.jpg
-- name: hollywood-building-hollywood-building-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-matrix.jpg
-- name: old-barn-old-barn-1500-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-soul.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-horiz-circuit.jpg
+- name: bluelake-blue-brush-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-38-67.jpg
+- name: machine-road-machine-road-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-deep-connections.jpg
+- name: beach-rocks-beach-rocks-currents-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-gan-vogh.jpg
+- name: crow-crow-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-pablo-blue.jpg
+- name: old-school-house-old-schoolhouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-far-away.jpg
+- name: dragon-desert-desert-dragon-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-crabapple.jpg
+- name: adam-smith-adam-smith-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-internet-numbers.jpg
+- name: oldcabin-oldcabin-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-green-zuma.jpg
+- name: old-door-lock-old-door-lock-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-constitution.jpg
+- name: oldtrain-oldtrain-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-yellow-paper.jpg
+- name: lincoln-memorial-lincolnmemorial-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-hot-spicy.jpg
+- name: nyc-flag-nycflag-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-pond.jpg
+- name: machine-road-machine-road-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-neo-instinct.jpg
+- name: wreck-IMG_6968.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_6968.jpg
+- name: oldcabin-oldcabin-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-gred-mash.jpg
+- name: crow_clean_view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_clean_view.jpg
+- name: yuma-bank-yuma-bak-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-copper-circuit-2.jpg
+- name: copper-circuit-IMG_1184.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_1184.jpg
+- name: trucksilo-trucksilo-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-matrix.jpg
+- name: old-granary-field-granaryfield-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-deep-connections.jpg
+- name: window-window-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-atari-asteroids.jpg
+- name: white-house-whitehouse-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-ww2-color.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-pablo-blue.jpg
+- name: old-barn-old-barn-1500-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-satan-red.jpg
+- name: containership-containership-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-soul.jpg
+- name: oldhouse-oldhouse-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-diego-rivera1.jpg
+- name: ellis-island-ellisisland-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-purple-pond.jpg
 - name: old-granary-field-oldhouse-internet-numbers.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-internet-numbers.jpg
-- name: oldbarn-oldbarn-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-aqua.jpg
-- name: amusement-park-amusement-park-2-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-jap-dys-1.jpg
-- name: old-church-oldchurch-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purp-paper.jpg
-- name: capital-battle-capitolbattle-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dry-skin.jpg
-- name: old-gas-pumps-oldgaspumps-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dry-skin.jpg
-- name: oldroad-old-road-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-sunday.jpg
-- name: white-house-lawn-white-house-window-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-alien-goggles.jpg
-- name: bordercrossing-bordercrossing-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-post-modern.jpg
-- name: gypsy-wagon-gypsywagon-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-blue-granite.jpg
-- name: dc-statue-dcstatue-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-gan-vogh.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit-3.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit-3.png
-- name: aws-s3-stories-old-yellow-house.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-yellow-house.jpg
-- name: flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-rainbow-festival.jpg
-- name: mediterranean-mediterranean-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-colorful-blocks.jpg
-- name: bluelake-clean-view-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-01-17-38.jpg
-- name: yosemite-yosemite-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-spagetti-accident.jpg
-- name: oldbarn-oldbarn-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-really-hot.jpg
-- name: mediterranean-mediterranean-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-creativity.jpg
-- name: art-museum-art-museum-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-granite.jpg
-- name: old-gas-pumps-oldgaspumps-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-granite.jpg
-- name: dc-statue-dcstatue-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-clean-view.jpg
-- name: gears-4882162452-fa3126b38d-b-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crabapple.jpg
-- name: store-on-corner-store-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-graham-sutherland.jpg
-- name: birdhouse-birdhouse-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-neo-instinct.jpg
-- name: legal-statue-legalstatue-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-cinnamon-rolls.jpg
-- name: store-on-corner-store-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
-- name: walled-garden-walled-garden-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-smooth-ride.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-free-woman.jpg
-- name: old-barn-old-barn-1500.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500.jpg
-- name: aws-s3-stories-soldier-computer-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-soldier-computer-dark-dali.jpg
-- name: downtheline-downtheline-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-gred-mash.jpg
-- name: cargo-ship-cargo-ship-on-sea-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-soul.jpg
-- name: hollywood-building-hollywood-building-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crabapple.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
-- name: crow-crow-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-oily-mcoilface.jpg
-- name: downtown-los-angeles-downtown-la-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-soul.JPG
-- name: white-house-lawn-white-house-window-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-atari-asteroids.jpg
+- name: old-school-house-old-schoolhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smooth-ride.jpg
+- name: oldhotel-oldhotel-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-purple-pond.jpg
+- name: beach-rocks-beach-rocks-currents-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-satan-red.jpg
+- name: legal-statue-legalstatue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue.jpg
+- name: mediterranean-mediterranean-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-clean-view.jpg
+- name: legal-statue-legalstatue-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-matrix.jpg
+- name: subway-subway-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-light-dali.jpg
+- name: nyc-flag-nycflag-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-ww2-color.jpg
+- name: berlinwall2-berlinwall-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-wols.jpg
+- name: death-valley-death-valley-national-park-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-granite.jpg
+- name: udnie-IMG_8355.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8355.jpg
+- name: border-fence-border-fence-on-hill-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-colorful-blocks.jpg
+- name: stories-new-65-144-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-65-144-800-500-0-max-0-1--1.jpg
+- name: statue-of-liberty-front-view-statueofliberty.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-hot-spicy.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-hot-spicy.JPG
+- name: store-on-corner-oldcabin-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-wols.jpg
+- name: supreme-court-supremecourt-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-really-hot.jpg
+- name: flower-barbed-wire-flower-barbed-wire-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-bright-sand.jpg
+- name: bluelake-creativity-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-00-00.jpg
+- name: beach-rocks-beach-rocks-currents-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-deep-connections.jpg
+- name: downtown-trucksilo-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dali-two.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-granite.jpg
+- name: hollywood-building-hollywood-building-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-satan-red.jpg
 ---
 Rains Lower Hay Production.&nbsp;Let Them Eat Toast.&nbsp;Devon Allen Signs With Nike.&nbsp;Animated Gremlins Prequel In The Works.&nbsp;The Season Of Giving.&nbsp;Sheriff's Office Loses Accreditation After Parkland Shooting.&nbsp;Evers Facing Pressure To Sign Wisconsin Budget.&nbsp;Hyndman Loaned To Atlanta By Bournemouth.&nbsp;
